fix scrollbar on ios

--- a/nuxt_frontend/assets/general.sass
+++ b/nuxt_frontend/assets/general.sass
@@ -25,8 +25,7 @@ html
   color: $pax-white
 
 ::-webkit-scrollbar
-  width: 10px
-  background-color: #e9e9e9
+  -webkit-appearance: none
 
 ::-webkit-scrollbar-thumb
   background: #333
